--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "jest"
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native-cookies)/)"
+    ]
+  },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.0",
     "express": "^4.16.3",
-    "styled-components": "^3.3.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "styled-components": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.22.15",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@testing-library/jest-dom": "^5.11.2",
@@ -41,7 +47,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.2.2",
     "nodemon": "^1.17.3",
-    "react-test-renderer": "^16.13.1",
+    "react-test-renderer": "^16.5.2",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
